--- a/notebooks/simple_predictions.ipynb
+++ b/notebooks/simple_predictions.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -112,8 +112,8 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>1</td>\n",
-       "      <td>88.477707</td>\n",
-       "      <td>90.194268</td>\n",
+       "      <td>80.666667</td>\n",
+       "      <td>87.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -128,8 +128,8 @@
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>2</td>\n",
-       "      <td>88.477707</td>\n",
-       "      <td>90.194268</td>\n",
+       "      <td>78.500000</td>\n",
+       "      <td>86.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -144,8 +144,8 @@
        "      <td>2</td>\n",
        "      <td>False</td>\n",
        "      <td>8</td>\n",
-       "      <td>88.477707</td>\n",
-       "      <td>90.194268</td>\n",
+       "      <td>77.000000</td>\n",
+       "      <td>86.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -160,8 +160,8 @@
        "      <td>2</td>\n",
        "      <td>False</td>\n",
        "      <td>9</td>\n",
-       "      <td>88.477707</td>\n",
-       "      <td>90.194268</td>\n",
+       "      <td>77.000000</td>\n",
+       "      <td>86.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -176,8 +176,8 @@
        "      <td>4</td>\n",
        "      <td>False</td>\n",
        "      <td>19</td>\n",
-       "      <td>88.477707</td>\n",
-       "      <td>90.194268</td>\n",
+       "      <td>92.571429</td>\n",
+       "      <td>88.428571</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -192,14 +192,14 @@
        "4    0  0  19  81  89          0     True        0                 4   \n",
        "\n",
        "   color_condition  time      agg_x      agg_y  \n",
-       "0            False     1  88.477707  90.194268  \n",
-       "1            False     2  88.477707  90.194268  \n",
-       "2            False     8  88.477707  90.194268  \n",
-       "3            False     9  88.477707  90.194268  \n",
-       "4            False    19  88.477707  90.194268  "
+       "0            False     1  80.666667  87.666667  \n",
+       "1            False     2  78.500000  86.000000  \n",
+       "2            False     8  77.000000  86.000000  \n",
+       "3            False     9  77.000000  86.000000  \n",
+       "4            False    19  92.571429  88.428571  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,8 +235,8 @@
     "\n",
     "keys = [\n",
     "    \"uid\", \n",
-    "    # \"dayofweek\", \n",
-    "    # \"detailed_t_label\",\n",
+    "    \"weekend\", \n",
+    "    \"t\",\n",
     "    ]\n",
     "agg_df = train_df.query(\"d < 60\").groupby(keys)[[\"x\", \"y\"]].agg(\"mean\").reset_index().rename(columns={\"x\":\"agg_x\", \"y\":\"agg_y\"})\n",
     "if \"agg_x\" in train_df.columns:\n",
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -301,8 +301,8 @@
        "      <td>3</td>\n",
        "      <td>True</td>\n",
        "      <td>6012</td>\n",
-       "      <td>88.477707</td>\n",
-       "      <td>90.194268</td>\n",
+       "      <td>82.956522</td>\n",
+       "      <td>92.434783</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -317,8 +317,8 @@
        "      <td>3</td>\n",
        "      <td>True</td>\n",
        "      <td>6013</td>\n",
-       "      <td>88.477707</td>\n",
-       "      <td>90.194268</td>\n",
+       "      <td>85.827586</td>\n",
+       "      <td>90.517241</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -333,8 +333,8 @@
        "      <td>3</td>\n",
        "      <td>True</td>\n",
        "      <td>6014</td>\n",
-       "      <td>88.477707</td>\n",
-       "      <td>90.194268</td>\n",
+       "      <td>91.178571</td>\n",
+       "      <td>91.392857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -349,8 +349,8 @@
        "      <td>3</td>\n",
        "      <td>True</td>\n",
        "      <td>6015</td>\n",
-       "      <td>88.477707</td>\n",
-       "      <td>90.194268</td>\n",
+       "      <td>90.384615</td>\n",
+       "      <td>90.307692</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -365,8 +365,8 @@
        "      <td>4</td>\n",
        "      <td>True</td>\n",
        "      <td>6019</td>\n",
-       "      <td>88.477707</td>\n",
-       "      <td>90.194268</td>\n",
+       "      <td>85.812500</td>\n",
+       "      <td>91.218750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -385,7 +385,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1251949</th>\n",
+       "      <th>1242481</th>\n",
        "      <td>4999</td>\n",
        "      <td>74</td>\n",
        "      <td>23</td>\n",
@@ -397,11 +397,11 @@
        "      <td>5</td>\n",
        "      <td>True</td>\n",
        "      <td>7423</td>\n",
-       "      <td>142.654624</td>\n",
-       "      <td>73.812139</td>\n",
+       "      <td>132.333333</td>\n",
+       "      <td>69.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1251950</th>\n",
+       "      <th>1242482</th>\n",
        "      <td>4999</td>\n",
        "      <td>74</td>\n",
        "      <td>24</td>\n",
@@ -413,11 +413,11 @@
        "      <td>6</td>\n",
        "      <td>True</td>\n",
        "      <td>7424</td>\n",
-       "      <td>142.654624</td>\n",
-       "      <td>73.812139</td>\n",
+       "      <td>132.857143</td>\n",
+       "      <td>75.285714</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1251951</th>\n",
+       "      <th>1242483</th>\n",
        "      <td>4999</td>\n",
        "      <td>74</td>\n",
        "      <td>25</td>\n",
@@ -429,11 +429,11 @@
        "      <td>6</td>\n",
        "      <td>True</td>\n",
        "      <td>7425</td>\n",
-       "      <td>142.654624</td>\n",
-       "      <td>73.812139</td>\n",
+       "      <td>139.714286</td>\n",
+       "      <td>76.857143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1251952</th>\n",
+       "      <th>1242484</th>\n",
        "      <td>4999</td>\n",
        "      <td>74</td>\n",
        "      <td>43</td>\n",
@@ -445,11 +445,11 @@
        "      <td>10</td>\n",
        "      <td>True</td>\n",
        "      <td>7443</td>\n",
-       "      <td>142.654624</td>\n",
-       "      <td>73.812139</td>\n",
+       "      <td>144.040000</td>\n",
+       "      <td>71.280000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1251953</th>\n",
+       "      <th>1242485</th>\n",
        "      <td>4999</td>\n",
        "      <td>74</td>\n",
        "      <td>44</td>\n",
@@ -461,12 +461,12 @@
        "      <td>11</td>\n",
        "      <td>True</td>\n",
        "      <td>7444</td>\n",
-       "      <td>142.654624</td>\n",
-       "      <td>73.812139</td>\n",
+       "      <td>141.482759</td>\n",
+       "      <td>69.862069</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1251954 rows × 13 columns</p>\n",
+       "<p>1242486 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -477,29 +477,29 @@
        "3           0  60  15  114  78          4    False        0                 3   \n",
        "4           0  60  19  114  78          4    False        0                 4   \n",
        "...       ...  ..  ..  ...  ..        ...      ...      ...               ...   \n",
-       "1251949  4999  74  23  129  81          4    False        0                 5   \n",
-       "1251950  4999  74  24  138  75          4    False        0                 6   \n",
-       "1251951  4999  74  25  150  73          4    False        0                 6   \n",
-       "1251952  4999  74  43  149  70          4    False        1                10   \n",
-       "1251953  4999  74  44  148  69          4    False        1                11   \n",
+       "1242481  4999  74  23  129  81          4    False        0                 5   \n",
+       "1242482  4999  74  24  138  75          4    False        0                 6   \n",
+       "1242483  4999  74  25  150  73          4    False        0                 6   \n",
+       "1242484  4999  74  43  149  70          4    False        1                10   \n",
+       "1242485  4999  74  44  148  69          4    False        1                11   \n",
        "\n",
        "         color_condition  time       agg_x      agg_y  \n",
-       "0                   True  6012   88.477707  90.194268  \n",
-       "1                   True  6013   88.477707  90.194268  \n",
-       "2                   True  6014   88.477707  90.194268  \n",
-       "3                   True  6015   88.477707  90.194268  \n",
-       "4                   True  6019   88.477707  90.194268  \n",
+       "0                   True  6012   82.956522  92.434783  \n",
+       "1                   True  6013   85.827586  90.517241  \n",
+       "2                   True  6014   91.178571  91.392857  \n",
+       "3                   True  6015   90.384615  90.307692  \n",
+       "4                   True  6019   85.812500  91.218750  \n",
        "...                  ...   ...         ...        ...  \n",
-       "1251949             True  7423  142.654624  73.812139  \n",
-       "1251950             True  7424  142.654624  73.812139  \n",
-       "1251951             True  7425  142.654624  73.812139  \n",
-       "1251952             True  7443  142.654624  73.812139  \n",
-       "1251953             True  7444  142.654624  73.812139  \n",
+       "1242481             True  7423  132.333333  69.000000  \n",
+       "1242482             True  7424  132.857143  75.285714  \n",
+       "1242483             True  7425  139.714286  76.857143  \n",
+       "1242484             True  7443  144.040000  71.280000  \n",
+       "1242485             True  7444  141.482759  69.862069  \n",
        "\n",
-       "[1251954 rows x 13 columns]"
+       "[1242486 rows x 13 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,29 +532,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/100 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [00:23<00:00,  4.29it/s]\n"
+      "100%|██████████| 100/100 [00:21<00:00,  4.64it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "geobleu_score=0.05050414065773835, dtw_score=66.05624246731296\n",
-      "rmse=16.353793209760568\n"
+      "geobleu_score=0.1503528009896643, dtw_score=59.15418215645318\n",
+      "rmse=15.022119241274797\n"
      ]
     }
    ],
