--- a/notebooks/simple_predictions.ipynb
+++ b/notebooks/simple_predictions.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import gc"
    ]
   },
   {
@@ -15,20 +16,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"004_osushineko_task1midterm_humob\"\n",
+    "df = pd.read_parquet(\"/workspace/resources/input/task1_dataset_raw_train.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_uids = df.loc[df[\"x\"] == 999, \"uid\"].unique()\n",
+    "df = df[~df[\"uid\"].isin(test_uids)].reset_index(drop=True)\n",
+    "uids = df[\"uid\"].unique()\n",
+    "df = df[df[\"uid\"].isin(uids[:10000])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tr_uids = uids[:5000]\n",
+    "va_uids = uids[5000:]\n",
     "\n",
-    "task1_test_df = pd.read_parquet(\"/workspace/resources/tmp/task1_test.parquet\")\n",
-    "task1_preds_df = pd.read_csv(f\"/workspace/resources/tmp/{filename}.csv.gz\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.concat([task1_test_df.query(\"d < 60\"), task1_preds_df]).reset_index(drop=True)\n",
-    "df[\"time\"] = (df[\"d\"].astype(str).str.zfill(2) + df[\"t\"].astype(str).str.zfill(2)).astype(int)"
+    "train_df = df[df[\"uid\"].isin(tr_uids)].reset_index(drop=True)\n",
+    "valid_df = df[df[\"uid\"].isin(va_uids)].reset_index(drop=True)\n",
+    "del df\n",
+    "gc.collect()"
    ]
   },
   {
@@ -57,21 +72,82 @@
     "    return df\n",
     "    \n",
     "\n",
-    "df = assign_day_of_week(df)\n",
-    "df = assign_t_labe(df)\n",
-    "df = assign_detailed_t_label(df)\n",
+    "train_df = assign_day_of_week(train_df)\n",
+    "train_df = assign_t_labe(train_df)\n",
+    "train_df = assign_detailed_t_label(train_df)\n",
+    "\n",
+    "valid_df = assign_day_of_week(valid_df)\n",
+    "valid_df = assign_t_labe(valid_df)\n",
+    "valid_df = assign_detailed_t_label(valid_df)\n",
     "\n",
     "keys = [\n",
     "    \"uid\", \n",
     "    \"weekend\", \n",
-    "    \"detailed_t_label\",\n",
+    "    \"t\",\n",
     "    ]\n",
-    "agg_df = df.query(\"d < 60\").groupby(keys)[[\"x\", \"y\"]].agg(\"median\").reset_index().rename(columns={\"x\":\"agg_x\", \"y\":\"agg_y\"})\n",
-    "if \"agg_x\" in df.columns:\n",
-    "    df.drop(\"agg_x\", axis=1, inplace=True)\n",
-    "    df.drop(\"agg_y\", axis=1, inplace=True)\n",
-    "df = pd.merge(df, agg_df, on=keys, how=\"left\")\n",
-    "df.head()"
+    "agg_df = train_df.query(\"d < 60\").groupby(keys)[[\"x\", \"y\"]].agg(\"mean\").reset_index().rename(columns={\"x\":\"agg_x\", \"y\":\"agg_y\"})\n",
+    "if \"agg_x\" in train_df.columns:\n",
+    "    train_df.drop(\"agg_x\", axis=1, inplace=True)\n",
+    "    train_df.drop(\"agg_y\", axis=1, inplace=True)\n",
+    "train_df = pd.merge(train_df, agg_df, on=keys, how=\"left\")\n",
+    "train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds_df = train_df.query(\"d >= 60\").dropna().reset_index(drop=True)\n",
+    "preds_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "import geobleu\n",
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reference = preds_df[[\"uid\", \"d\", \"t\", \"x\", \"y\"]]\n",
+    "generated = preds_df[[\"uid\", \"d\", \"t\", \"agg_x\", \"agg_y\"]].rename(columns={\"agg_x\":\"x\", \"agg_y\":\"y\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geobleu_score = 0\n",
+    "dtw_score = 0\n",
+    "\n",
+    "eval_uids = reference[\"uid\"].unique()[:100]\n",
+    "for uid in tqdm(eval_uids):\n",
+    "    a_generated = generated.loc[generated[\"uid\"] == uid, [\"d\", \"t\", \"x\", \"y\"]].values.tolist()\n",
+    "    a_reference = reference.loc[reference[\"uid\"] == uid, [\"d\", \"t\", \"x\", \"y\"]].values.tolist()\n",
+    "    \n",
+    "    geobleu_score += geobleu.calc_geobleu(a_generated, a_reference, processes=3)\n",
+    "    dtw_score += geobleu.calc_dtw(a_generated, a_reference, processes=3)\n",
+    "\n",
+    "geobleu_score = geobleu_score / len(eval_uids)\n",
+    "dtw_score = dtw_score / len(eval_uids)\n",
+    "\n",
+    "print(f\"geobleu_score={geobleu_score}, dtw_score={dtw_score}\")\n",
+    "\n",
+    "rmse = mean_squared_error(y_true=reference[[\"x\", \"y\"]].values, y_pred=generated[[\"x\", \"y\"]].values, squared=False)\n",
+    "print(f\"rmse={rmse}\")"
    ]
   },
   {
@@ -126,8 +202,9 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
-    "uids = pd.Series(df[\"uid\"].unique()).sample(5, random_state=None)\n",
-    "plot_uid(df, uids)\n"
+    "train_df[\"time\"] = (train_df[\"d\"].astype(str).str.zfill(2) + train_df[\"t\"].astype(str).str.zfill(2)).astype(int)\n",
+    "uids = pd.Series(train_df[\"uid\"].unique()).sample(5, random_state=None)\n",
+    "plot_uid(train_df, uids)\n"
    ]
   }
  ],
